--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,33 +12,179 @@ body {
 
 .product-container{
   display: grid;
-  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-columns: 25% 25% 25% 25%;
   align-items: stretch;
 
 }
 .card-container{
   display: flex;
-  background: white;
+  background: #F0F0F0;
   margin: 8px;
   overflow: hidden;
 }
 .card-container .img-container{
-  display: flex;
-  justify-content: center;
+  background: #F0F0F0;
 }
 .card-container .img-container img{
-  height: 100px;
+  width: 120px;
 }
 
 .card-container .card-right-panel {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background: white;
+  padding: 16px 4px 8px;
+
 }
 .card-container .card-button{
-  
+  align-self: flex-end;
 }
+.card-button{
+  cursor: pointer;
+  background: #4AAE52;
+  border: none;
+  color: white;
+  height: 36px;
+  border-radius: 18px;
+  outline: none;
+  padding: 0 12px;
+}
+.card-button:hover{
+  background: #28af33;
+}
+.card-button:active{
+  transform: translateY(4px);
+}
+
+
 .card-container .product-name{
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.card-container .product-description{
+  font-size: 14px;
+  font-style: italic;
+  color: gray;
+}
+
+.card-container .product-sku, .card-container .product-pv{
+  text-align: center;
+  font-size: 12px;
+  color: gray;
+}
+
+.card-container .product-price {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  display: flex;
+  justify-content: space-around;
+  border-top: 1px solid gray;
+}
+.card-container .product-cp {
+  color: gray;
+  text-decoration: line-through;
+}
+
+.card-container .product-dp {
+  color: red;
+}
+.card-container .product-info{
+  padding-bottom: 8px;
+  max-width: 172px;
+}
+.card-container .product-pv{
+  color: blue;
+}
+
+header{
+  position: fixed;
+  top:0;
+  left: 0;
+  background: rgb(44, 99, 56);
+  width: 100%;
+  height: 56px;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+header h1 {
+  margin: 0;
+  padding: 8px;
+  color: white;
+  font-size: 16px;
+}
+header a {
+  text-decoration: none;
+  color: white;
+}
+header a:active{
+  color: inherit;
+}
+
+main{
+  margin-top: 56px;
+  margin-bottom: 48px;
+}
+
+header .header-right{
+  margin-left: auto;
+  padding-right: 10px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+
+}
+header .header-right button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: transparent;
+  height: 100%;
+  padding: 0 16px;
+}
+
+header .header-right button:active {
+  background: #13911d;
+}
+
+header input{
+  width: 75%;
+}
+
+input{
+  outline: none;
+  border-radius: 2px;
+  padding: 10px 10px;
+  border: none;
+}
+
+@media only screen and (max-width: 900px) {
+  html {
+    font-size: 100%;
+  }
+  .product-container{
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    align-items: stretch;
+  
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 100%;
+  }
+  .product-container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    align-items: stretch;
+  
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -50,5 +196,13 @@ body {
     grid-template-columns: 100%;
     align-items: stretch;
   
+  }
+  header input{
+    width: 40%;
+  }
+
+  .card-container .product-info{
+    padding-bottom: 8px;
+    max-width: unset;
   }
 }
