--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -16,11 +16,17 @@ body {
   align-items: stretch;
 
 }
-.card-container{
+
+.product-container--simple{
+  grid-template-columns: 100%;
+}
+
+.card-container, .card-container--simple{
   display: flex;
   background: #F0F0F0;
   margin: 8px;
   overflow: hidden;
+  transition: .5s all;
 }
 .card-container .img-container{
   background: #F0F0F0;
@@ -35,7 +41,7 @@ body {
   justify-content: space-between;
   background: white;
   padding: 16px 4px 8px;
-
+  width: 100%;
 }
 .card-container .card-button{
   align-self: flex-end;
@@ -47,8 +53,10 @@ body {
   color: white;
   height: 36px;
   border-radius: 18px;
-  outline: none;
+  outline: none !important;
   padding: 0 12px;
+  -webkit-tap-highlight-color: transparent;
+ 
 }
 .card-button:hover{
   background: #28af33;
@@ -56,6 +64,7 @@ body {
 .card-button:active{
   transform: translateY(4px);
 }
+
 
 
 .card-container .product-name{
@@ -85,12 +94,11 @@ body {
   justify-content: space-around;
   border-top: 1px solid gray;
 }
-.card-container .product-cp {
+.product-cp {
   color: gray;
-  text-decoration: line-through;
 }
 
-.card-container .product-dp {
+.product-dp {
   color: red;
 }
 .card-container .product-info{
@@ -101,11 +109,75 @@ body {
   color: blue;
 }
 
+.card-container--simple{
+  margin: 0px 8px;
+  padding: 8px 0px;
+  border-bottom: 1px solid gray;
+}
+
+.card-container--simple .img-container{
+  display: none;
+}
+
+.card-container--simple .card-info, .card-container--simple .card-right-panel, .card-container--simple .product-price{
+  display: flex;
+}
+.card-container--simple .card-right-panel{
+  padding: 0 16px;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+}
+
+.card-container--simple .product-description{
+  display: none;
+}
+
+.card-container--simple .card-button{
+  border-radius: 5px;
+}
+
+.card-container--simple .card-info{
+  width: 100%;
+}
+
+.card-container--simple .product-info{
+  width: 60%;
+}
+.card-container--simple .product-detail{
+  width: 40%;
+  display: flex;
+}
+.card-container--simple .product-sku{
+  flex-grow: 1;
+  font-size: 10px;
+  display: flex;
+  align-items: center;
+}
+.card-container--simple .product-pv{
+  flex-grow: 1;
+  font-size: 12px;
+  color: blue;
+  display: flex;
+  align-items: center;
+}
+.card-container--simple .product-price{
+  width: 50%;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+
+
+
 header{
+  z-index: 2;
   position: fixed;
   top:0;
   left: 0;
-  background: rgb(44, 99, 56);
+  background: #2c6338;
   width: 100%;
   height: 56px;
   color: white;
@@ -139,7 +211,7 @@ header .header-right{
   align-items: center;
 
 }
-header .header-right button {
+header button {
   cursor: pointer;
   border: none;
   outline: none;
@@ -148,12 +220,22 @@ header .header-right button {
   padding: 0 16px;
 }
 
-header .header-right button:active {
+header button:active {
   background: #13911d;
 }
 
 header input{
   width: 75%;
+}
+
+header .hamburger-menu{
+  display: none;
+  height: 100%;
+}
+
+footer{
+  height: 24px;
+  background: #2c6338;
 }
 
 input{
@@ -198,11 +280,65 @@ input{
   
   }
   header input{
-    width: 40%;
+    width: 100%;
+    margin: 0 12px;
+  }
+
+  header h1 {
+    display: none;
+  }
+
+  header .hamburger-menu{
+    display: unset;
   }
 
   .card-container .product-info{
     padding-bottom: 8px;
     max-width: unset;
+  }
+  .card-container .product-name{
+    font-size: 12px;
+  }
+
+  .card-container .product-sku, .card-container .product-pv{
+    display: inline-block;
+    margin-right: 8px;
+  }
+
+  .card-container .product-price {
+    margin-bottom: 0px;
+   
+  }
+  
+  .card-container .img-container img{
+    width: 110px;
+  }
+
+  .card-container--simple .product-detail{
+    width: 30%;
+    display: block;
+  }
+
+  .card-container--simple .product-detail > div{
+    padding-bottom: 4px;
+  }
+
+  .card-container--simple .product-sku{
+    font-size: 10px;
+    display: block;
+  }
+  .card-container--simple .product-pv{
+    font-size: 12px;
+    color: blue;
+    display: block;
+  }
+  .card-container--simple .product-price{
+    font-size: 14px;
+    display: block;
+    align-items: center;
+  }
+  .card-container--simple .product-info {
+    width: 70%;
+    padding-right: 8px;
   }
 }
