--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -94,7 +94,7 @@ body {
   color: gray;
 }
 
-.card-container .product-sku, .card-container .product-pv {
+.card-container .product-sku {
   text-align: center;
   font-size: 12px;
   color: gray;
@@ -107,7 +107,6 @@ body {
   padding-bottom: 8px;
   display: flex;
   justify-content: space-around;
-  border-top: 1px solid gray;
 }
 
 .product-cp {
@@ -127,8 +126,9 @@ body {
   max-width: 172px;
 }
 
-.card-container .product-pv {
+.product-pv {
   color: blue;
+  font-size: 12px;
 }
 
 .card-container--simple {
@@ -190,8 +190,7 @@ body {
 
 .card-container--simple .product-pv {
   flex-grow: 1;
-  font-size: 12px;
-  color: blue;
+
   display: flex;
   align-items: center;
 }
@@ -275,6 +274,7 @@ header .icon-back {
 main {
   margin-top: 56px;
   margin-bottom: 48px;
+  min-height: 100vh;
 }
 
 footer {
@@ -295,8 +295,50 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
 
 .icon-selection {}
 
+.cart-body{
+  display: flex;
+}
 .cart-container {
   width: 70%;
+}
+.cart-total-container {
+  width: 30%;
+  height: 250px;
+  position: fixed;
+  right: 0;
+}
+.cart-total{
+  background: white;
+  height: 100%;
+  margin: 8px;
+  padding: 16px;
+  border-radius: 5px;
+  text-align: center;
+}
+.cart-total label{
+  display: block;
+  margin-bottom: 32px;
+}
+
+.cart-total .title{
+  font-size: 22px;
+  border-bottom: 1px solid gray;
+  padding-bottom: 8px;
+}
+
+.cart-total .total-pv{
+  font-size: 28px;
+  color: blue;
+}
+
+.cart-total .total-dp{
+  font-size: 28px;
+  color: red;
+}
+
+.cart-total .total-price{
+  font-size: 28px;
+  color: gray;
 }
 
 .cartItem-container {
@@ -309,6 +351,9 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
 
 .cartItem-container .card-container {
   width: 100%;
+  margin: 0px;
+  margin-top: 1px;
+  border: none;
 }
 
 .cartItem-container .card-container .product-info {
@@ -324,7 +369,6 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
 }
 
 .cartItem-container .product-price {
-  border: none;
   display: block;
   text-align: left;
 }
@@ -333,25 +377,41 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
   text-align: left;
 }
 
+
 .cartItem-action {
   display: flex;
+  padding-top: 12px;
+  background: white;
+  margin: 1px 0px 0px 1px;  
+}
+
+.cartItem-action .product-pv{
+  margin-top: 16px;
+}
+
+.cartItem-action .product-dp{ 
+  margin-top: 16px;
 }
 
 .cartItem-quantity {
   width: 200px;
   overflow: hidden;
-  margin: 4px;
-  background: white;
   display: flex;
   flex-flow: column;
-  margin-right: 0px;
   align-items: center;
 }
-.cartItem-remove{
-  margin-top: 4px;
-  background: white;
-  margin-bottom: 4px;
+
+.cartItem-remove {
+  margin-top: 5px;
+  padding: 0 8px;
 }
+
+.cartItem-remove label{
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
+
 
 .input-group {
   display: table;
@@ -380,9 +440,15 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
   background: #f8f8f8;
 }
 
-.input-group-btn--down {
+.input-group-btn--down button{
   border-radius: 3px 0 0 3px;
+  margin-right: -2px;
 }
+.input-group-btn--up button{
+  border-radius: 0 3px 3px 0;
+  margin-left: -2px;
+}
+
 
 .input-group-number {
   background: white;
@@ -448,6 +514,7 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
   }
   .card-container .product-name {
     font-size: 12px;
+    padding-right: 32px;
   }
   .card-container .product-sku, .card-container .product-pv {
     display: inline-block;
@@ -471,8 +538,6 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
     display: block;
   }
   .card-container--simple .product-pv {
-    font-size: 12px;
-    color: blue;
     display: block;
   }
   .card-container--simple .product-price {
@@ -483,5 +548,58 @@ input[type="email"], input[type="number"], input[type="password"], input[type="t
   .card-container--simple .product-info {
     width: 70%;
     padding-right: 8px;
+  }
+
+  .cart-total-container{
+    width: 100%;
+    height: 72px;
+    bottom: 0;
+  }
+  .cart-total{
+    display: flex;
+    justify-content: space-between;
+    border: 4px solid gray;
+    height: unset;
+  }
+
+  .cart-total .title,  .cart-total .total-dp, .cart-total .total-pv, .cart-total .total-price{
+    font-size: 16px;
+    margin: 0px;
+    padding: 0px;
+    border: none;
+  }
+
+  .cart-container{
+    width: 100%;
+  }
+  .cartItem-container{
+    display: block;
+    position: relative;
+  }
+  .cartItem-container .product-price{
+    display: flex;
+  }
+  .cartItem-quantity{
+    flex-flow: row;
+    width: 100%;
+  }
+  .cartItem-action {
+    padding-top: 0px;
+    margin: 0 0 4px 0;
+  }
+  .cartItem-action .cartItem-quantity {
+    justify-content: space-between;
+    padding: 8px 8px 8px 16px;
+  }
+  .cartItem-action .cartItem-quantity div{
+    margin-top: 0px;
+  }
+  .cartItem-remove{
+    position: absolute;
+    top: 7px;
+    right: 0;
+  }
+  .card-container {
+    border: none;
   }
 }
