--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -209,12 +209,16 @@ button:active {
 }
 
 header {
-  z-index: 2;
   position: fixed;
+  z-index: 2;
   top: 0;
   left: 0;
-  background: #2c6338;
   width: 100%;
+  transition: 350ms;
+}
+
+header .header-menu {
+  background: #2c6338;
   height: 56px;
   color: white;
   display: flex;
@@ -245,7 +249,7 @@ header .header-right {
   align-items: center;
 }
 
-header button {
+.header-menu button {
   cursor: pointer;
   border: none;
   outline: none;
@@ -259,7 +263,7 @@ header a {
   height: 100%;
 }
 
-header button:active {
+.header-menu button:active {
   background: #13911d;
 }
 
@@ -274,6 +278,43 @@ header .hamburger-menu {
 header .icon-back {
   color: white;
   font-size: 23px;
+}
+
+.category{
+  display: flex;
+  overflow-x: auto;
+  background: white;
+  align-items: center;
+  overflow: auto;
+  height: 40px;
+  padding: 4px 10px;
+  transition: 350ms;
+} 
+
+button[class^="btn-group"]{
+  background: white;
+  color: #4AAE52;
+  user-select: none;
+  outline: none;
+  border: 1px solid #4AAE52;
+  margin: 0;
+  font-size: 14px;
+  height: 36px;
+  cursor: pointer;
+  font-weight: 700;
+  border-radius: 3px;
+  padding: 0 10px;
+  white-space: nowrap;
+  margin-right: 8px;
+}
+
+button[class^="btn-group active"]{
+  background: #4AAE52;
+  color: white;
+}
+
+.product-body{
+  margin-top: 104px;
 }
 
 main {
